# streetview-capturing-sys

./: .gitignore  SAM_101.md  agents.md  api_usage_guide.md.resolved  inputs  pyproject.toml  template.yaml
auto-run/: pegman.py
backend/: .env  __init__.py  main.py  template.yaml
backend/agents/: __init__.py  base_agent.py  face_screening_agent.py  refinement_agent.py
backend/config/: __init__.py
backend/models/: data_classes.py
backend/pipeline/: viewpoint_generator.py
backend/prompts/: templates.py
backend/services/: __init__.py  geocoding.py
backend/src/: api_handler.py  status_handler.py
backend/utils/: __init__.py  geo.py
frontend/: README.md
lat_long_point_v2/: .env.example  agents.md  dump.json  main.py  pyproject.toml  requirements.txt  run_pipeline.py  template.yaml
lat_long_point_v2/agents/: analysis_agent.py
lat_long_point_v2/app/: README.md  requirements.txt  streamlit_app.py
lat_long_point_v2/app/components/: json_validator.py  map_viewer.py  pipeline_runner.py  results_display.py  wizard_ui.py
lat_long_point_v2/app/utils/: coordinates.py  geojson_helpers.py
lat_long_point_v2/config/: settings.py
lat_long_point_v2/models/: __init__.py  data_classes.py
lat_long_point_v2/pipeline/: __init__.py  road_finder.py  viewpoint_generator.py
lat_long_point_v2/prompts/: __init__.py  templates.py
lat_long_point_v2/services/: google_maps.py
lat_long_point_v2/src/: process_handler.py
lat_long_point_v2/utils/: geocoding.py
polygon_v1/: app.py
type/: app.py
