[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streetview-building-capturing"
version = "0.1.0"
description = "Unified Building Detection System (V1 + V2)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "googlemaps>=4.10.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0"
]

[tool.setuptools.packages.find]
where = ["lat_long_point_v2", "polygon_v1", "type"]
