[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "building-detection-v2"
version = "0.1.0"
description = "Building Detection V2 Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "googlemaps>=4.10.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0"
]
